--- a/atividades.html
+++ b/atividades.html
@@ -18,7 +18,7 @@
         <header>
             <section class="caixa-cabecalho">
                 <h1>Viagem</h1>
-                <p>Para acessar as páginas, basta clicar em cima da opção.</p>
+                <p>Para acessar as páginas, basta clicar em cima da opção em negrito.</p>
                 
             <div class="borda"></div>
             </section>
@@ -28,10 +28,10 @@
             <section class="caixa-main">
                 <ul class="navegacao">  
                     <li>
-                        <a href="index.html" target="_blank">&#127976; Hospedagens</a>
+                        <p><a href="index.html" target="_blank">&#127976; Hospedagens</a></p>
                     </li>
                     <li>
-                        <a href="atividades.html" target="_blank">&#127915; Atividades</a>
+                        <p><a href="atividades.html" target="_blank">&#127915; Atividades</a></p>
                     </li>
                 </ul>
 
