--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul>
                     <div class="caixa-casas">
                         <section class="info-box">
-                            <p>Casas com piscina, espaço bom e churrasqueira</p>
+                            <p>Casas com piscina, espaço médio e churrasqueira</p>
                             <p>Data: 17/02 a 21/02</p>
                         </section>
 
