--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
                     <div class="caixa-casas">
                         <section class="info-box">
-                            <p>Casas com piscina, espaço grande e churrasqueira</p>
+                            <p>Casas com piscina, espaço grande, churrasqueira e sinuca</p>
                             <p>Data: 18/02 a 21/02</p>
                         </section>
 
@@ -144,15 +144,21 @@
                             <p><a href="https://www.airbnb.com.br/rooms/52797294?adults=8&category_tag=Tag%3A677&search_mode=flex_destinations_search&check_in=2023-02-18&check_out=2023-02-21&source_impression_id=p3_1671206470_VQ5PnCA5CXwlqmwJ&guests=1" target="_blank">Opção 1</a></p>
                             <p class="valor">R$ 2800,00</p>
                             <p class="informacoes">3 quartos, 3 carros</p>
-                            <p class="informacoes">Benefícios: mesa de sinuca</p>
                             <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/miso/Hosting-52797294/original/8becb365-767e-4a65-846f-899924d71d97.jpeg?im_w=1200">
                         </li>
 
                         <li>
-                            <p><a href="https://www.airbnb.com.br/rooms/47712688?adults=8&category_tag=Tag%3A677&search_mode=flex_destinations_search&check_in=2023-02-17&check_out=2023-02-21&source_impression_id=p3_1671206482_Uy06CrQn%2BfvKUWR5" target="_blank">Opção 2</a></p>
-                            <p class="valor">R$ 2234,00</p>
-                            <p class="informacoes">3 quartos, 3 carros</p>
-                            <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/f6c1576f-0493-42ab-9626-e5eb24761d03.jpg?im_w=1440">
+                            <p><a href="https://www.airbnb.com.br/rooms/36419270?adults=8&check_in=2023-02-18&check_out=2023-02-21&source_impression_id=p3_1671228656_LWfWHmrafELmDiLw&guests=1" target="_blank">Opção 2</a></p>
+                            <p class="valor">R$ 2886,00</p>
+                            <p class="informacoes">4 quartos, 3 carros</p>
+                            <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/miso/Hosting-36419270/original/653f2324-91d9-4023-b2ba-721289c41e6d.jpeg?im_w=1200">
+                        </li>
+
+                        <li>
+                            <p><a href="https://www.airbnb.com.br/rooms/36419730?adults=8&source_impression_id=p3_1671228602_j1IS4a%2FvsAN1ZvN7&guests=1&check_in=2023-02-18&check_out=2023-02-21" target="_blank">Opção 3</a></p>
+                            <p class="valor">R$ 2783,00</p>
+                            <p class="informacoes">4 quartos, 3 carros</p>
+                            <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/miso/Hosting-36419730/original/cf7ca52f-a80c-473b-b88b-a7ad30fcfbc9.jpeg?im_w=1440">
                         </li>
                     </div>
                 </ul>
