--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
                             <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/miso/Hosting-52797294/original/8becb365-767e-4a65-846f-899924d71d97.jpeg?im_w=1200">
                         </li>
 
-                        <!-- li>
-                            <p><a href="https://www.airbnb.com.br/rooms/36419270?adults=8&check_in=2023-02-18&check_out=2023-02-21&source_impression_id=p3_1671228656_LWfWHmrafELmDiLw&guests=1" target="_blank">Opção 2</a></p>
-                            <p class="valor">R$ 2886,00</p>
-                            <p class="informacoes">4 quartos, 3 carros</p>
-                            <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/miso/Hosting-36419270/original/653f2324-91d9-4023-b2ba-721289c41e6d.jpeg?im_w=1200">
+                        <li>
+                            <p><a href="https://www.airbnb.com.br/rooms/663522966511936485?adults=8&check_in=2023-02-17&source_impression_id=p3_1671302119_KgNI1EyoyV%2BD8NNT&guests=1&check_out=2023-02-21" target="_blank">Opção 2</a></p>
+                            <p class="valor">R$ 2474,00</p>
+                            <p class="informacoes">3 quartos, 3 carros</p>
+                            <img class="imagem-casa" src="https://a0.muscache.com/im/pictures/8f6bff7a-bb5b-4bdc-8e3b-f66ce5fc2259.jpg?im_w=1200">
                         </li>
 
-                        <li>
+                        <!--li>
                             <p><a href="https://www.airbnb.com.br/rooms/36419730?adults=8&source_impression_id=p3_1671228602_j1IS4a%2FvsAN1ZvN7&guests=1&check_in=2023-02-18&check_out=2023-02-21" target="_blank">Opção 3</a></p>
                             <p class="valor">R$ 2783,00</p>
                             <p class="informacoes">4 quartos, 3 carros</p>
